--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "socket.io": "^4.2.0",
     "typescript": "^4.4.3"
   },
   "devDependencies": {
