--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
+    "socket.io-client": "^4.2.0",
     "typescript": "~4.1.5"
   },
   "eslintConfig": {
